--------------------------------------------------------------------------------
drkns 2025-02-12 19:48:48+00:00 - build 6438

1. gh-909: Alpha-channel and FCF_INHERIT_STYLE should be applied to filepanel cursor.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-02-11 19:37:03+00:00 - build 6437

1. Rename FCF_FG_INVERSE to FCF_INVERSE.

2. Fix Shift+Enter in histories.

--------------------------------------------------------------------------------
drkns 2025-02-10 01:02:20+00:00 - build 6436

1. Correction of 6434.

--------------------------------------------------------------------------------
drkns 2025-02-09 23:33:54+00:00 - build 6435

1. Correction of 6434.

--------------------------------------------------------------------------------
drkns 2025-02-09 21:59:45+00:00 - build 6434

1. Refactoring.

--------------------------------------------------------------------------------
skipik 2025-02-06 20:08:12+03:00 - build 6433

1. SQLite v3.49.0.

--------------------------------------------------------------------------------
drkns 2025-02-05 23:04:04+00:00 - build 6432

1. Improve logging.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-02-05 01:37:50+00:00 - build 6431

1. gh-903: Crash on exit.

--------------------------------------------------------------------------------
drkns 2025-02-04 20:18:36+00:00 - build 6430

1. Remove the workaround for WT-17833.
   The bug existed only in Preview and only from 1.22.2362.0 (2024/08/27) till 1.22.2702.0 (2024/09/28), so it should be safe to do so.

--------------------------------------------------------------------------------
drkns 2025-02-03 18:07:40+00:00 - build 6429

1. gh-897: freeze on start.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-02-01 20:20:43+00:00 - build 6428

1. Continue gh-811: fix a menu redraw issue.
